Update open_pdf
